--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -14,7 +14,7 @@
 
         <div class="w3-container w3-hoverable">
             <a href="https://www.facebook.com/events/1842814522622071/" class="quitar">
-                <span class="textodescripcion">White Vinyl 2 | 23 hs | CABA|</span>
+                <span class="textodescripcion">White Vinyl 2 | 23 hs | Adrogue|</span>
                 <span class="texttercernivel">26 de Noviembre de 2016</span>
                 <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px"> Cancelado
             </a>
