--- a/views/layout.erb
+++ b/views/layout.erb
@@ -58,7 +58,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
-                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                <a href="mailto:contacto@buenacosecha.musica.ar?subject=contacto" target="_blank">
                     <i id="social-em" class="fa fa-envelope-square fa-3x social"></i>
                 </a>
             </li>
