--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -13,7 +13,7 @@
         <br>
 
         <div class="w3-container w3-hoverable">
-            <a href="https://www.facebook.com/events/244836622629158/" class="quitar">
+            <a href="carnal" class="quitar">
                 <span class="textodescripcion">Carnal Bar | 21 hs | CABA|</span>
                 <span class="texttercernivel">8 de Febrero de 2017</span>
                 <img src="/imagenes/flyers/carnalbar.jpg" class="w3-circle w3-margin-right" style="width:45px">
@@ -21,7 +21,7 @@
         </div>
 
         <div class="w3-container w3-hoverable">
-            <a href="https://www.facebook.com/events/1842814522622071/" class="quitar">
+            <a href="monociclo" class="quitar">
                 <span class="textodescripcion">Monociclo Club de Arte | 22 hs | Banfield|</span>
                 <span class="texttercernivel">8 de Diciembre de 2016</span>
                 <img src="/imagenes/flyers/whitevinyl2.jpg" class="w3-circle w3-margin-right" style="width:45px">
