--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,13 @@
     <body>
 
         <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
+          <div class="mySlides  w3-display-container">
+              <img src="/imagenes/galeria/flyers/makena.jpg" class="w3-animate-bottom" style="width:100%">
+              <div class="w3-display-middle w3-container w3-padding-16 w3-red">
+                  Buena Cosecha !
+              </div>
+          </div>
+
             <div class="mySlides  w3-display-container">
                 <img src="/imagenes/galeria/slide/band4.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-middle w3-container w3-padding-16 w3-red">
