--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,7 @@
 
         <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
           <div class="mySlides  w3-display-container">
-              <img src="/imagenes/galeria/flyers/makena.jpg" class="w3-animate-bottom" style="width:100%">
+              <img src="/imagenes/flyers/makena.jpg" class="w3-animate-bottom" style="width:100%">
               <div class="w3-display-middle w3-container w3-padding-16 w3-red">
                   Buena Cosecha !
               </div>
