--- a/views/index.erb
+++ b/views/index.erb
@@ -12,10 +12,12 @@
     </head>
 
     <body>
-        <div class="w3-content w3-center" style="max-width:1800px;margin-top:54px">
+        <div class="w3-content w3-center" style="max-width:1800px;margin-top:30px">
             <div class="mySlides  w3-display-container">
                 <img class="animated rotateIn infinite" src="/imagenes/logos/bclogo.png">
             </div>
+          </div>
+
 
             <!--
 
