--- a/views/secciones/videos.erb
+++ b/views/secciones/videos.erb
@@ -19,6 +19,24 @@
         <br>
 
         <div class="container">
+          <div class="row">
+              <div class="col-sm-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                      <iframe src="https://www.youtube.com/embed/cPqmEusAeLo"></iframe>
+                  </div>
+              </div>
+              <div class="col-sm-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                      <iframe src="https://www.youtube.com/embed/0pyE-RAto9g"></iframe>
+                  </div>
+              </div>
+              <div class="col-sm-4">
+                  <div class="embed-responsive embed-responsive-16by9">
+                      <iframe src="https://www.youtube.com/embed/c9Gxydiy6IQ"></iframe>
+                  </div>
+              </div>
+          </div>
+
             <div class="row">
                 <div class="col-sm-4">
                     <div class="embed-responsive embed-responsive-16by9">
