--- a/views/layout.erb
+++ b/views/layout.erb
@@ -83,7 +83,7 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
-                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fopen.spotify.com%2Falbum%2F1G8EXEJwuIyXM2MsVQrir1%3Fsi%3DZTDTSRL-R9GoKE_-63EGXA&h=ATOlvlGsMdSPNuH1zr8tcE-n4Jr2zrlCtDsZlq-HvK5mH2DMGLs5CD44ByexTHSpF6jN0P67AzAO7TsoxLzrV7KrH4sGNbbF6HcUw78XmdImLozvDOUv6zFpFg6wPc3fwGgvyAdJ84b97cJvNf8aSWfc5NvjS3GKxkmo1KBr_OIIaNIvhOeBt3qvpskL90e-Q7-62N943U6CnHDJT-xaGRbEcu5OgeYiOozR7MxK5MZYkeD_kHsqNhGHseCn7w9OKhlY-UUkA5ySqRaT6QWqvA00QcIFqy5ZLkGqgPXgWak" target="_blank">
+                <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
                     <i id="social-sp" class="fa fa-spotify fa-3x social"></i>
                 </a>
             </li>
@@ -138,6 +138,12 @@
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
         <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
             <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
+        </a>
+        <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
+            <i id="social-tw" class="fa fa-spotify-square fa-2x social"></i>
+        </a>
+        <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
+            <i id="social-in" class="fa fa-soundcloud fa-2x social"></i>
         </a>
         <a href="https://www.twitter.com/buenacosechaska" target="_blank">
             <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
