--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,7 +52,9 @@
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium">
-                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                <a href="javascript:void(0)">
+                    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                </a>
             </li>
 
             <li class="w3-hide-small w3-hide-medium w3-right">
