--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -12,5 +12,14 @@
         <br>
         <br>
         <br>
-<iframe width="480" height="600" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>    </body>
-</html>
+
+        <div class="">
+
+            <div class="">
+              <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+            </div>
+            <div class="">
+              <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1&theme=white&view=coverart" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+            </div>
+        </div>
+    </html>
