--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -15,17 +15,16 @@
 
         <div class="w3-container">
           <div class="textocategorias">
-            Descargar todo el EP "Semilla" <a href=http://www.filedropper.com/semilla-2017-buenacosecha></a> <span class="glyphicon glyphicon-cloud-download"></span>
+            Descargar todo el EP "Semilla" <a href="http://www.filedropper.com/semilla-2017-buenacosecha" target="_blank"></a> <span class="glyphicon glyphicon-cloud-download"></span>
+            <br>
+            Descargar Green Fingers <a href="http://www.filedropper.com/1-greenfingers"target="_blank"> </a> <span class="glyphicon glyphicon-cloud-download"></span>
+            <br>
+            Descargar Misteria <a href="http://www.filedropper.com/2-misteria"target="_blank"> </a> <span class="glyphicon glyphicon-cloud-download"></span>
+            <br>
+            Descargar Tierra <a href="http://www.filedropper.com/3-tierra" target="_blank"> </a> <span class="glyphicon glyphicon-cloud-download"></span>
+            <br>
 
-            <br>
-            Descargar Green Fingers <a href=http://www.filedropper.com/1-greenfingers></a> <span class="glyphicon glyphicon-cloud-download"></span>
-            <br>
-            Descargar Misteria <a href=http://www.filedropper.com/2-misteria></a> <span class="glyphicon glyphicon-cloud-download"></span>
-            <br>
-            Descargar Tierra <a href=http://www.filedropper.com/3-tierra></a> <span class="glyphicon glyphicon-cloud-download"></span>
-            <br>
-
-
+<a href=http://www.filedropper.com/semilla-2017-buenacosecha><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br /><div style=font-size:9px;font-family:Arial, Helvetica, sans-serif;width:127px;font-color:#44a854;> <a href=http://www.filedropper.com >upload files online</a></div>
           </div>
 
             <div class="w3-container">
