--- a/views/secciones/audios.erb
+++ b/views/secciones/audios.erb
@@ -17,58 +17,47 @@
             <div class="textocategorias">
                 <div class="">
                     Descargar todo el EP "Semilla"
-                    <a href=http://www.filedropper.com/semilla-2017-buenacosecha target="_blank"><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
-                    <a
-                        href="http://www.filedropper.com/semilla-2017-buenacosecha"
-                        </a>
-                        </div>
-                        <br>
-                        <div class="">
-                        Descargar
-                        Green
-                        Fingers
-                        <a href=http://www.filedropper.com/1-greenfingers target="_blank">
-                        src=http://www.filedropper.com/download_button.png
-                        width=127
-                        height=145
-                        border=0<img/></a><br/>
+                    <a href=http://www.filedropper.com/semilla-2017-buenacosecha target="_blank"><img src=http://www.filedropper.com/download_button.png width=80 height=80 border=0/></a><br/>
+                    <div class="">
+                        Descargar Green Fingers
+                        <a href=http://www.filedropper.com/1-greenfingers target="_blank"><img src=http://www.filedropper.com/download_button.png width=80 height=80 border=0<img/></a><br/>
+                    </div>
+                    <br>
+                    <div class="">
+                        Descargar Misteria
+                        <a href=http://www.filedropper.com/2-misteria target="_blank"><img src=http://www.filedropper.com/download_button.png width=80 height=80 border=0/></a><br/>
+                    </div>
+                    <br>
+                    <div class="">
+                        Descargar Tierra
+                        <a href=http://www.filedropper.com/3-tierra target="_blank"><img src=http://www.filedropper.com/download_button.png width=80 height=80 border=0/></a><br/>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+                <a href=http://www.filedropper.com/semilla-2017-buenacosecha><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
+                <div style=font-size:9px;font-family:Arial, Helvetica, sans-serif;width:127px;font-color:#44a854;>
+                    <a href=http://www.filedropper.com>upload files online</a>
+                </div>
+            </div>
+
+            <div class="w3-container">
+                <iframe
+                    width="100%"
+                    height="300"
+                    scrolling="no"
+                    frameborder="no"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
             </div>
             <br>
-            <div class="">
-                Descargar Misteria
-                <a href=http://www.filedropper.com/2-misteria target="_blank"><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
+            <br>
+            <div class="w3-container">
+                <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1&theme=white&view=coverart" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
             </div>
             <br>
-            <div class="">
-                Descargar Tierra
-                <a href=http://www.filedropper.com/3-tierra target="_blank"><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
-            </div>
+            <br>
+
         </div>
-
-        <br>
-        <br>
-
-        <a href=http://www.filedropper.com/semilla-2017-buenacosecha><img src=http://www.filedropper.com/download_button.png width=127 height=145 border=0/></a><br/>
-        <div style=font-size:9px;font-family:Arial, Helvetica, sans-serif;width:127px;font-color:#44a854;>
-            <a href=http://www.filedropper.com>upload files online</a>
-        </div>
-    </div>
-
-    <div class="w3-container">
-        <iframe
-            width="100%"
-            height="300"
-            scrolling="no"
-            frameborder="no"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/389595677&amp;color=%23c8e030&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
-    </div>
-    <br>
-    <br>
-    <div class="w3-container">
-        <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1&theme=white&view=coverart" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
-    </div>
-    <br>
-    <br>
-
-</div>
-</html>
+    </html>
