--- a/views/layout.erb
+++ b/views/layout.erb
@@ -44,6 +44,7 @@
                     <h4 id="menunosotros" class="menuhomeverde">NOSOTROS</h4>
                 </a>
             </li>
+
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
                     <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
@@ -56,52 +57,49 @@
                     </i>
                 </a>
             </li>
-
-
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <!-- dejo en stand este boton <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="javascript:void(0)">
-                    <i id="social-se" class="fa fa-search fa-3x social" style="font-size:26px"></i>
+                    <i id="social-se" class="fa fa-search fa-5x social" style="font-size:30px"></i>
                 </a>
-            </li>
-
+            </li> -->
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="mailto:contacto@buenacosecha.musica.ar?subject=contacto" target="_blank">
-                    <i id="social-em" class="fa fa-envelope-square fa-3x social" style="font-size:26px"></i>
+                    <i id="social-em" class="fa fa-envelope-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.instagram.com/buenacosechaska" target="_blank">
-                    <i id="social-in" class="fa fa-instagram fa-3x social" style="font-size:26px"></i>
+                    <i id="social-in" class="fa fa-instagram fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
-                    <i id="social-yt" class="fa fa-youtube-play fa-3x social" style="font-size:26px"></i>
+                    <i id="social-yt" class="fa fa-youtube-play fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.twitter.com/buenacosechaska" target="_blank">
-                    <i id="social-tw" class="fa fa-twitter-square fa-3x social" style="font-size:26px"></i>
+                    <i id="social-tw" class="fa fa-twitter-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
-                    <i id="social-sc" class="fa fa-soundcloud fa-3x social" style="font-size:26px"></i>
+                    <i id="social-sc" class="fa fa-soundcloud fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
-                    <i id="social-sp" class="fa fa-spotify fa-3x social" style="font-size:26px"></i>
+                    <i id="social-sp" class="fa fa-spotify fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                    <i id="social-fb" class="fa fa-facebook-square fa-3x social" style="font-size:26px"></i>
+                    <i id="social-fb" class="fa fa-facebook-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="/">
-                    <i id="social-ho" class="fa fa-home fa-3x social" style="font-size:26px"></i>
+                    <i id="social-ho" class="fa fa-home fa-3x social" style="font-size:30px"></i>
                 </a>
             </li>
         </ul>
