--- a/views/layout.erb
+++ b/views/layout.erb
@@ -94,12 +94,12 @@
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
-                    <i id="social-fb" class="fa fa-facebook-square fa-5x social font-size:30px" style="font-size:30px"></i>
+                    <i id="social-fb" class="fa fa-facebook-square fa-5x social font-size:30px"></i>
                 </a>
             </li>
             <li class="w3-hide-small w3-hide-medium w3-right">
                 <a href="/">
-                    <i id="social-ho" class="fa fa-home fa-5x social font-size:30px" style="font-size:30px"></i>
+                    <i id="social-ho" class="fa fa-home fa-5x social font-size:30px"></i>
                 </a>
             </li>
         </ul>
