--- a/views/layout.erb
+++ b/views/layout.erb
@@ -62,7 +62,7 @@
                     <i id="social-se" class="fa fa-search fa-5x social" style="font-size:30px"></i>
                 </a>
             </li> -->
-            <li class="w3-hide-small w3-hide-medium w3-display-middle w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-display-right">
                 <a href="mailto:contacto@buenacosecha.musica.ar?subject=contacto" target="_blank">
                     <i id="social-em" class="fa fa-envelope-square fa-5x social" style="font-size:30px"></i>
                 </a>
