--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,12 +45,12 @@
                 </a>
             </li>
 
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="javascript:void(0)">
                     <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:1m9R8RiV69vJDs6Bq4zodg&size=basic&theme=dark" width="200" height="28" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="javascript:void(0)">
                     <i id="fb-root" class="fa-3x social">
                         <div class="fb-like" data-href="https://www.facebook.com/buenacosechabanda/" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div>
@@ -67,37 +67,37 @@
                     <i id="social-em" class="fa fa-envelope-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://www.instagram.com/buenacosechaska" target="_blank">
                     <i id="social-in" class="fa fa-instagram fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                     <i id="social-yt" class="fa fa-youtube-play fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://www.twitter.com/buenacosechaska" target="_blank">
                     <i id="social-tw" class="fa fa-twitter-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://www.soundcloud.com/buenacosecha" target="_blank">
                     <i id="social-sc" class="fa fa-soundcloud fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://open.spotify.com/artist/1m9R8RiV69vJDs6Bq4zodg" target="_blank">
                     <i id="social-sp" class="fa fa-spotify fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                     <i id="social-fb" class="fa fa-facebook-square fa-5x social" style="font-size:30px"></i>
                 </a>
             </li>
-            <li class="w3-hide-small w3-hide-medium w3-right">
+            <li class="w3-hide-small w3-hide-medium w3-padding w3-display-right">
                 <a href="/">
                     <i id="social-ho" class="fa fa-home fa-5x social" style="font-size:30px"></i>
                 </a>
