--- a/views/index2.erb
+++ b/views/index2.erb
@@ -17,7 +17,7 @@
             <div class="w3-container w3-half w3-white">
                 <h2>Semilla</h2>
                 <p>Nuestro primer EP</p>
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapa">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapa" style="width:100%">
             </div>
             <div class="w3-container w3-half w3-black">
                 <h2>Audios</h2>
