--- a/views/index2.erb
+++ b/views/index2.erb
@@ -14,13 +14,14 @@
     </head>
     <body>
         <div class="w3-row w3-border">
-            <div class="w3-container w3-half w3-white">
+            <div class="w3-container w3-half w3-white w3-margin-left ">
                 <h2>Semilla</h2>
                 <p>Nuestro primer EP</p>
                 <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapa" style="width:75%;margin-top:10px">
             </div>
             <div class="w3-container w3-half w3-black">
-                <h2>Audios</h2>
+                <h2>Canciones</h2>
+                <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
         </div>
 
