--- a/views/index2.erb
+++ b/views/index2.erb
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="w3-row w3-border">
-            <div class="w3-container w3-half w3-white w3-margin-left ">
+            <div class="w3-container w3-half w3-white">
                 <h2>Semilla</h2>
                 <p>Nuestro primer EP</p>
                 <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapa" style="width:75%;margin-top:10px">
