--- a/views/index2.erb
+++ b/views/index2.erb
@@ -15,12 +15,12 @@
     <body>
         <div class="w3-row w3-border">
             <div class="w3-container w3-half w3-white">
-                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapa" style="width:75%;margin-top:10px">
+                <img src="/imagenes/galeria/ep/tapa.jpg" alt="tapasemilla" style="width:50%;margin-top:30px">
             </div>
             <div class="w3-container w3-half w3-black">
               <h2>Semilla</h2>
               <p>Nuestro primer EP</p>
-                <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+                <iframe src="https://open.spotify.com/embed?uri=spotify:album:1G8EXEJwuIyXM2MsVQrir1" style="margin-top:30px" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
             </div>
         </div>
 
